--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.0",
         "laravel/lumen-framework": "5.5.*",
         "vlucas/phpdotenv": "~2.2",
-        "appzcoder/lumen-routes-list": "^1.0"
+        "appzcoder/lumen-routes-list": "^1.0",
+        "dusterio/lumen-passport": "^0.2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
