--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "appzcoder/lumen-routes-list": "^1.0",
         "dusterio/lumen-passport": "^0.2.4",
         "nordsoftware/lumen-cors": "^2.2",
-        "ramsey/uuid": "^3.7"
+        "ramsey/uuid": "^3.7",
+        "spatie/laravel-activitylog": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +22,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+                "app/helpers.php"
+            ]
     },
     "autoload-dev": {
         "classmap": [
