--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=7.0",
-        "laravel/lumen-framework": "5.5.*",
-        "vlucas/phpdotenv": "~2.2",
         "appzcoder/lumen-routes-list": "^1.0",
         "dusterio/lumen-passport": "^0.2.4",
+        "folklore/graphql": "dev-feature/relay",
+        "laravel/lumen-framework": "5.5.*",
         "nordsoftware/lumen-cors": "^2.2",
         "ramsey/uuid": "^3.7",
-        "spatie/laravel-activitylog": "^2.4"
+        "react/promise": "^2.5",
+        "spatie/laravel-activitylog": "^2.4",
+        "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,6 +22,9 @@
         "phpunit/phpunit": "~6.0"
     },
     "autoload": {
+        "classmap": [
+          "database"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
@@ -41,6 +46,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
+        "sort-packages": true,
         "optimize-autoloader": true
     }
 }
