--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,49 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": ">=7.0",
-        "appzcoder/lumen-routes-list": "^1.0",
-        "dusterio/lumen-passport": "^0.2.4",
-        "folklore/graphql": "dev-feature/relay",
-        "laravel/lumen-framework": "5.5.*",
-        "nordsoftware/lumen-cors": "^2.2",
-        "ramsey/uuid": "^3.7",
-        "react/promise": "^2.5",
-        "spatie/laravel-activitylog": "^2.4",
-        "vlucas/phpdotenv": "~2.2"
-    },
-    "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0"
-    },
-    "autoload": {
-        "classmap": [
-          "database"
-        ],
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "files": [
-                "app/helpers.php"
-            ]
-    },
-    "autoload-dev": {
-        "classmap": [
-            "tests/",
-            "database/"
-        ]
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ]
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "sort-packages": true,
-        "optimize-autoloader": true
+  "name": "laravel/lumen",
+  "description": "The Laravel Lumen Framework.",
+  "keywords": ["framework", "laravel", "lumen"],
+  "license": "MIT",
+  "type": "project",
+  "repositories": [
+    {
+      "type": "path",
+      "url": "/Users/smac/Developer/Laravel/Laravel-Plugins/laravel-graphql"
     }
+  ],
+  "require": {
+    "php": ">=7.0",
+    "appzcoder/lumen-routes-list": "^1.0",
+    "dusterio/lumen-passport": "^0.2.4",
+    "folklore/graphql": "dev-feature/relay",
+    "laravel/lumen-framework": "5.5.*",
+    "nordsoftware/lumen-cors": "^2.2",
+    "ramsey/uuid": "^3.7",
+    "react/promise": "^2.5",
+    "spatie/laravel-activitylog": "^2.4",
+    "vlucas/phpdotenv": "~2.2"
+  },
+  "require-dev": {
+    "fzaninotto/faker": "~1.4",
+    "mockery/mockery": "~1.0",
+    "phpunit/phpunit": "~6.0"
+  },
+  "autoload": {
+    "classmap": ["database"],
+    "psr-4": {
+      "App\\": "app/"
+    },
+    "files": ["app/helpers.php"]
+  },
+  "autoload-dev": {
+    "classmap": ["tests/", "database/"]
+  },
+  "scripts": {
+    "post-root-package-install": ["php -r \"copy('.env.example', '.env');\""]
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "sort-packages": true,
+    "optimize-autoloader": true
+  }
 }
